--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# The required python packages in this file can be istalled using pip. 
+# The required python packages in this file can be installed using pip. 
 # Usage: pip install -r requirements.txt
 
 # Flask Framework
@@ -7,3 +7,5 @@ Flask==3.0.0
 # Flask Packages
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+wtforms==3.1.1
